# Dynamo

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  config.js  ecosystem.config.js  ecosystem.pm2.cjs  package-lock.json  package.json  playwright.dashboard.config.cjs
.github/workflows/: rust-ci.yml
crates/access/: Cargo.toml
crates/access/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: main.rs
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs  repositories.rs  services.rs
crates/core/: Cargo.toml
crates/core/src/: command_sync.rs  config.rs  currency.rs  dashboard_audit.rs  enablement.rs  guard.rs  invite.rs  lib.rs  module.rs  registry.rs  repositories.rs  services.rs  settings.rs  startup.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: main.rs
crates/domain-currency/: Cargo.toml
crates/domain-currency/src/: lib.rs
crates/domain-giveaway/: Cargo.toml
crates/domain-giveaway/src/: lib.rs
crates/domain-invite/: Cargo.toml
crates/domain-moderation/: Cargo.toml
crates/domain-moderation/src/: lib.rs
crates/domain-stats/: Cargo.toml
crates/domain-stats/src/: lib.rs
crates/domain-stock/: Cargo.toml
crates/domain-stock/src/: lib.rs
crates/domain-suggestion/: Cargo.toml
crates/domain-suggestion/src/: lib.rs
crates/enablement/: Cargo.toml
crates/enablement/src/: lib.rs
crates/module-kit/: Cargo.toml
crates/module-kit/src/: lib.rs
crates/modules/currency/: Cargo.toml
crates/modules/currency/src/: lib.rs
crates/modules/gameinfo/: Cargo.toml
crates/modules/gameinfo/src/: lib.rs
crates/modules/giveaway/: Cargo.toml
crates/modules/giveaway/src/: lib.rs
crates/modules/greeting/: Cargo.toml
crates/modules/greeting/src/: lib.rs
crates/modules/info/: Cargo.toml
crates/modules/info/src/: lib.rs
crates/modules/invite/: Cargo.toml
crates/modules/invite/src/: lib.rs
crates/modules/moderation/: Cargo.toml
crates/modules/moderation/src/: lib.rs
crates/modules/music/: Cargo.toml
crates/modules/music/src/: lib.rs
crates/modules/stats/: Cargo.toml
crates/modules/stats/src/: lib.rs
crates/modules/stock/: Cargo.toml
crates/modules/stock/src/: lib.rs
crates/modules/suggestion/: Cargo.toml
crates/modules/suggestion/src/: lib.rs
crates/modules/ticket/: Cargo.toml
crates/modules/ticket/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/ops/: Cargo.toml
crates/ops/src/: dashboard_audit.rs  lib.rs
crates/persistence-api/: Cargo.toml
crates/persistence-api/src/: lib.rs
crates/persistence-mongo/: Cargo.toml
crates/persistence-mongo/src/: lib.rs
crates/providers/google-finance/: Cargo.toml
crates/providers/google-finance/src/: lib.rs
crates/providers/music-songbird/: Cargo.toml
crates/providers/music-songbird/src/: lib.rs
crates/providers/yahoo/: Cargo.toml
crates/providers/yahoo/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/repositories/: Cargo.toml
crates/repositories/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime-api/: Cargo.toml
crates/runtime-api/src/: lib.rs
crates/runtime/src/: enablement.rs  guard.rs  lib.rs  registry.rs
crates/service-exchange/: Cargo.toml
crates/service-exchange/src/: lib.rs
crates/service-stock/: Cargo.toml
crates/service-stock/src/: lib.rs
crates/services-api/: Cargo.toml
crates/services-api/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
docs/: dev-smoke-checklist.md  music-lavalink-guide.md  workspace-architecture.md
docs/cutover/: current-repo-rust-cutover-checklist.md  js-pattern-audit.md
docs/rust-template/: cutover-checklist.md  js-pattern-audit.md
scripts/: build-rpi-aarch64.ps1  build-rpi-aarch64.sh  check-workspace-structure.ps1  check-workspace-structure.sh  deploy-rpi-aarch64.ps1  deploy-rpi-aarch64.sh  dev-down.ps1  dev-down.sh  dev-up.ps1  dev-up.sh  export-js-archive.ps1  export-js-archive.sh  export-rust-template.ps1  export-rust-template.sh  prod-bootstrap.sh  prod-bot.sh  prod-build.sh  prod-dashboard.sh  remote-rpi-postdeploy.sh
src/: data - 복사본.json  data.json  removecmd.js  test.js
src/commands/currency/: exchange.js  rate.js  rates.js
src/commands/gameinfo/: maint.js  pll.js  wtinv.js
src/commands/owner/: reload.js
src/commands/stock/: etf.js  stock.js
src/commands/utility/: converttime.js
src/helpers/: StockService.js  exchange.js
src/structures/: CommandCategory.js
templates/js-archive/: README.md
templates/rust-template/: .env.example  .gitignore  README.md  package.json
tests/playwright/: dashboard-guild-smoke.spec.cjs
