[workspace]
members = [
  "crates/app",
  "crates/dashboard",
  "crates/bootstrap",
  "crates/core",
  "crates/bot",
  "crates/persistence-mongo",
  "crates/modules/info",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["MARU"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
dotenvy = "0.15.7"
mongodb = "3.5.0"
poise = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
