[package]
name = "dynamo-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dynamo-core = { path = "../core" }
dynamo-module-info = { path = "../modules/info" }
dynamo-persistence-mongo = { path = "../persistence-mongo" }
tracing.workspace = true
