[package]
name = "dynamo-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dynamo-config = { path = "../config" }
dynamo-enablement = { path = "../enablement" }
dynamo-module-kit = { path = "../module-kit" }
dynamo-ops = { path = "../ops" }
dynamo-registry = { path = "../registry" }
dynamo-repositories = { path = "../repositories" }
dynamo-runtime-api = { path = "../runtime-api" }
dynamo-service-exchange = { path = "../service-exchange" }
dynamo-service-stock = { path = "../service-stock" }
dynamo-settings = { path = "../settings" }
dynamo-module-currency = { path = "../modules/currency" }
dynamo-module-gameinfo = { path = "../modules/gameinfo" }
dynamo-module-giveaway = { path = "../modules/giveaway" }
dynamo-module-greeting = { path = "../modules/greeting" }
dynamo-module-info = { path = "../modules/info" }
dynamo-module-invite = { path = "../modules/invite" }
dynamo-module-moderation = { path = "../modules/moderation" }
dynamo-module-suggestion = { path = "../modules/suggestion" }
dynamo-module-stats = { path = "../modules/stats" }
dynamo-module-ticket = { path = "../modules/ticket" }
dynamo-module-stock = { path = "../modules/stock" }
dynamo-provider-google-finance = { path = "../providers/google-finance" }
dynamo-persistence-mongo = { path = "../persistence-mongo" }
dynamo-provider-yahoo = { path = "../providers/yahoo" }
poise.workspace = true
tracing.workspace = true
