[package]
name = "dynamo-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
dynamo-observability = { path = "../observability" }
dynamo-persistence-mongo = { path = "../persistence-mongo" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
