[package]
name = "dynamo-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dynamo-app = { path = "../app" }
dynamo-access = { path = "../access" }
dynamo-config = { path = "../config" }
dynamo-module-giveaway = { path = "../modules/giveaway" }
dynamo-module-kit = { path = "../module-kit" }
dynamo-observability = { path = "../observability" }
dynamo-ops = { path = "../ops" }
dynamo-persistence-api = { path = "../persistence-api" }
dynamo-provider-google-finance = { path = "../providers/google-finance" }
dynamo-registry = { path = "../registry" }
dynamo-runtime-api = { path = "../runtime-api" }
dynamo-services-api = { path = "../services-api" }
dynamo-settings = { path = "../settings" }
dotenvy.workspace = true
poise.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
