[package]
name = "dynamo-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dynamo-domain-currency = { path = "../domain-currency" }
dynamo-domain-giveaway = { path = "../domain-giveaway" }
dynamo-domain-invite = { path = "../domain-invite" }
dynamo-domain-moderation = { path = "../domain-moderation" }
dynamo-domain-stats = { path = "../domain-stats" }
dynamo-domain-stock = { path = "../domain-stock" }
dynamo-domain-suggestion = { path = "../domain-suggestion" }
dynamo-ops = { path = "../ops" }
serde.workspace = true
serde_json.workspace = true
