[package]
name = "dynamo-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
dynamo-app = { path = "../app" }
dynamo-core = { path = "../core" }
dynamo-persistence-mongo = { path = "../persistence-mongo" }
dotenvy.workspace = true
futures-util.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
