[package]
name = "dynamo-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
dynamo-app = { path = "../app" }
dynamo-enablement = { path = "../enablement" }
dynamo-module-kit = { path = "../module-kit" }
dynamo-observability = { path = "../observability" }
dynamo-ops = { path = "../ops" }
dynamo-persistence-api = { path = "../persistence-api" }
dynamo-runtime-api = { path = "../runtime-api" }
dynamo-settings = { path = "../settings" }
dotenvy.workspace = true
futures-util.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
