[package]
name = "dynamo-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dynamo-contracts = { path = "../contracts" }
dynamo-module-kit = { path = "../module-kit" }
dynamo-runtime = { path = "../runtime" }
poise.workspace = true
tracing.workspace = true
