[package]
name = "dynamo-persistence-mongo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dynamo-core = { path = "../core" }
futures-util.workspace = true
mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true
