[package]
name = "dynamo-persistence-mongo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dynamo-contracts = { path = "../contracts" }
dynamo-domain-giveaway = { path = "../domain-giveaway" }
dynamo-domain-invite = { path = "../domain-invite" }
dynamo-domain-moderation = { path = "../domain-moderation" }
dynamo-domain-stats = { path = "../domain-stats" }
dynamo-domain-suggestion = { path = "../domain-suggestion" }
dynamo-ops = { path = "../ops" }
futures-util.workspace = true
mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tokio.workspace = true
