[package]
name = "dynamo-runtime-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dynamo-module-kit = { path = "../module-kit" }
dynamo-persistence-api = { path = "../persistence-api" }
dynamo-services-api = { path = "../services-api" }
poise.workspace = true
