[package]
name = "dynamo-module-currency"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dynamo-contracts = { path = "../../contracts" }
dynamo-domain-currency = { path = "../../domain-currency" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-runtime = { path = "../../runtime" }
futures-util.workspace = true
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
