[package]
name = "dynamo-module-gameinfo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dynamo-core = { path = "../../core" }
poise.workspace = true
regex.workspace = true
reqwest.workspace = true
rss.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
