[package]
name = "dynamo-module-giveaway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dynamo-domain-giveaway = { path = "../../domain-giveaway" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-runtime = { path = "../../runtime" }
humantime.workspace = true
poise.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
