[package]
name = "dynamo-module-greeting"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dynamo-contracts = { path = "../../contracts" }
dynamo-domain-invite = { path = "../../domain-invite" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-runtime = { path = "../../runtime" }
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
