[package]
name = "dynamo-module-invite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dynamo-domain-invite = { path = "../../domain-invite" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-runtime = { path = "../../runtime" }
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
