[package]
name = "dynamo-module-moderation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dynamo-domain-moderation = { path = "../../domain-moderation" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-runtime = { path = "../../runtime" }
humantime.workspace = true
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
