[package]
name = "dynamo-module-music"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dynamo-contracts = { path = "../../contracts" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-runtime = { path = "../../runtime" }
poise.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
