[package]
name = "dynamo-module-stats"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dynamo-core = { path = "../../core" }
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
