[package]
name = "dynamo-module-stats"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dynamo-domain-stats = { path = "../../domain-stats" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-enablement = { path = "../../enablement" }
dynamo-repositories = { path = "../../repositories" }
dynamo-runtime-api = { path = "../../runtime-api" }
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
