[package]
name = "dynamo-module-stock"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dynamo-contracts = { path = "../../contracts" }
dynamo-domain-stock = { path = "../../domain-stock" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-runtime = { path = "../../runtime" }
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
