[package]
name = "dynamo-module-stock"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dynamo-access = { path = "../../access" }
dynamo-domain-stock = { path = "../../domain-stock" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-runtime-api = { path = "../../runtime-api" }
dynamo-service-stock = { path = "../../service-stock" }
dynamo-settings = { path = "../../settings" }
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
