[package]
name = "dynamo-module-suggestion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
dynamo-contracts = { path = "../../contracts" }
dynamo-domain-suggestion = { path = "../../domain-suggestion" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-runtime = { path = "../../runtime" }
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
