[package]
name = "dynamo-module-suggestion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
dynamo-access = { path = "../../access" }
dynamo-domain-suggestion = { path = "../../domain-suggestion" }
dynamo-module-kit = { path = "../../module-kit" }
dynamo-repositories = { path = "../../repositories" }
dynamo-runtime-api = { path = "../../runtime-api" }
dynamo-settings = { path = "../../settings" }
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
