[package]
name = "dynamo-provider-music-songbird"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dynamo-core = { path = "../../core" }
poise.workspace = true
reqwest.workspace = true
songbird.workspace = true
tokio.workspace = true
tracing.workspace = true
