[package]
name = "dynamo-provider-yahoo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dynamo-domain-stock = { path = "../../domain-stock" }
dynamo-repositories = { path = "../../repositories" }
dynamo-service-stock = { path = "../../service-stock" }
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
dotenvy.workspace = true
dynamo-persistence-mongo = { path = "../../persistence-mongo" }
